--- a/index.html
+++ b/index.html
@@ -6,8 +6,86 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Card UI with CSS</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 </head>
 <body>
+
+    <div class="wrapper">
+        <div class="overviewInfo">
+            <div class="actions">
+                <div class="backbutton">
+                    <i class="fi-rr-arrow-left"></i>
+                </div>
+                <div class="cartbutton neurobutton">
+                    <i class="fi-rr-shopping-cart"></i>
+                </div>
+            </div>
+            <div class="productinfo">
+                <div class="grouptext">
+                    <h3>PLATFORM</h3>
+                    <p>PS5</p>
+                </div>
+                <div class="grouptext">
+                    <h3>RELEASE</h3>
+                    <p>Fall 2020</p>
+                </div>
+                <div class="grouptext">
+                    <h3>Price</h3>
+                    <p>$50</p>
+                </div>
+                <div class="productImage">
+                    <img src="joystick.png" alt="ps5 controler image">
+                </div>
+            </div>
+        </div>
+    <div class="productSpecifications">
+        <h1>Dual Sense</h1>
+        <p>
+            DualSense also adds a build-in microphone array, which will enable players to easily chat with friends without a headset...
+        </p>
+        <div class="productFeatures">
+            <div class="feature">
+                <div class="featureIcon"></div>
+                <div class="featureText">
+                    <p><strong>Futuristic</strong></p>
+                    <p>Design</p>
+                </div>
+            </div>
+            <div class="feature">
+                <div class="featureIcon"></div>
+                <div class="featureText">
+                    <p><strong>Built-in</strong></p>
+                    <p>Microphone</p>
+                </div>
+            </div>
+            <div class="feature">
+                <div class="featureIcon"></div>
+                <div class="featureText">
+                    <p><strong>Haptic</strong></p>
+                    <p>Feedback</p>
+                </div>
+            </div>
+            <div class="feature">
+                <div class="featureIcon"></div>
+                <div class="featureText">
+                    <p><strong>Fast Charge</strong></p>
+                    <p>Usb-c port</p>
+                </div>
+            </div>
+            <div class="checkoutButton">
+                <div class="priceTag">
+                    <span>$</span>50
+                </div>
+                <button class="preorder">
+                    <p>Preorder</p>
+                    <div class="buttonaction">
+                        <i class="fi-rr-arrow-right"></i>
+                    </div>
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
 
 
     <script src="index.js"></script>
